# cmake-demo

./: CMakeLists.txt  makeall.sh
etc/: proj.env
include/: util.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/util/: CMakeLists.txt  print.cpp
test/: CMakeLists.txt
test/project1/: CMakeLists.txt  test_project1.cpp
