#SET(SRC_LIST print.cpp)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_LIST)
SET(LIB_NAME "util")
SET(LIB_DEP "")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

#libname, type(SHARED|STATIC), source file
ADD_LIBRARY(${LIB_NAME} SHARED ${SRC_LIST})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${LIB_DEP})
